--- a/style.css
+++ b/style.css
@@ -1,41 +1,35 @@
 body {
-  background-color: #353940;
-}
-.dropbtn {
-  background-color: black;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+  margin: 0;
+  background-color: white;
+  opacity: 75
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 10%;
+  background-color: yellow;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+  border-right: solid 5px;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
   text-decoration: none;
-  display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-  display: block;
+li a.active {
+  background-color: #04AA6D;
+  color: white;
 }
 
-.dropdown:hover .dropbtn {
-  background-color: #1e2024;
+li a:hover:not(.active) {
+  background-color: #555;
+  color: white;
 }
