--- a/style.css
+++ b/style.css
@@ -1,35 +1,35 @@
-body {
-  margin: 0;
-  background-color: white;
-  opacity: 75
+.background {
+  height: ;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 23%, rgba(0,212,255,1) 100%);
 }
 
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 10%;
-  background-color: yellow;
-  position: fixed;
-  height: 100%;
-  overflow: auto;
-  border-right: solid 5px;
+.main {
+   margin-left: 140px;
+   font-size: 200%;
+   padding: 0 3%;
 }
-
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
+section {
+   height: 400px;
+   background-color: tomato;
 }
-
-li a.active {
-  background-color: #04AA6D;
-  color: white;
+.sidebar {
+   height: 100%;
+   width: 140px;
+   top: 0;
+   left: 0;
+   position: fixed;
+   background-color: #020024;
+   padding-top: 20px;
 }
+.sidebar a {
+   display: block;
+   padding: 2% 4%;
+   text-decoration: none;
+   color: lightblue;
+   font-size: 1.4em;
+}
+.sidebar a:hover {
+   color: white;
 
-li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
 }
