--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-.background {
-  height: ;
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 23%, rgba(0,212,255,1) 100%);
+body {
+
+  background: rgb(11,88,173);
+  background: linear-gradient(280deg, rgba(11,88,173,1) 0%, rgba(0,212,255,1) 100%);  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .main {
@@ -32,4 +33,9 @@ section {
 .sidebar a:hover {
    color: white;
 
+}
+
+.img {
+  padding-left: 700px;
+  padding-top: 800px;
 }
