--- a/style.css
+++ b/style.css
@@ -46,18 +46,17 @@ p {
 }
 div.gallery {
   margin-left: 15%;
-
-  border: 1px solid gray;
+  margin-top: 5%;
+  border: 4px solid gray;
   float: left;
   width: 240px;
   height: 240px;
 }
 div.gallery:hover {
-  border: 1px solid black;
+  border: 4px solid black;
 }
 div.description {
   padding: 15px;
-  border: 1px solid black;
   text-align: center;
 }
 footer {
