--- a/style.css
+++ b/style.css
@@ -14,9 +14,7 @@ body {
 .me {
   margin-left: 50%;
 }
-.contact {
-  margin-top: 330px;
-}
+
 p {
   font-size: 60%;
 }
@@ -67,4 +65,8 @@ footer {
   width: 100%;
   background-color: #020024;
   color: white;
+}
+div.plaatjeik {
+  margin-left: 25%;
+  margin-top: 5%;
 }
